fixed css jumping issue on hover

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,12 +1,12 @@
 #tweets {
-  margin: 1em 2em 1em 2em;
+  margin: 30px 2em 10px 2em;
 }
 
 article.tweet {
-  border-radius: 5pt;
-  border: 1pt solid #00a087;
+  border-radius: 5px;
+  border: 1px solid #00a087;
   overflow: hidden;
-  margin-bottom: 1em;
+  margin-bottom: 10px;
 }
 
 article.tweet header {
@@ -16,11 +16,11 @@ article.tweet header {
 }
 
 article.tweet header .avatar {
-  margin: 5pt;
+  margin: 5px;
   height: 50px;
   width: 50px;
   float: left;
-  border-radius: 3pt;
+  border-radius: 3px;
 }
 
 article.tweet header .author {
@@ -32,17 +32,17 @@ article.tweet header .author {
 article.tweet header .username {
   float: right;
   font-size: 0.75em;
-  margin: 5pt 2pt;
+  margin: 5px 2px;
 }
 
 article.tweet section {
-  padding: 3pt;
-  margin: 0pt;
+  padding: 3px;
+  margin: 0px;
 }
 
 article.tweet footer {
-  border-top: 1pt solid #00a087;
-  padding: 7pt;
+  border-top: 1px solid #00a087;
+  padding: 7px;
   font-size: 0.5em;
   color: #00a087;
 }
@@ -53,7 +53,7 @@ article.tweet footer .icons {
 }
 
 article.tweet footer .icons i {
-  margin-right: 3pt;
+  margin-right: 3px;
 }
 
 article.tweet:hover footer .icons {
@@ -61,9 +61,10 @@ article.tweet:hover footer .icons {
 }
 
 article.tweet:hover {
-  border: 1.5pt solid #00a087;
+  border: 1.5px solid #00a087;
+  margin-bottom: 8.5px;
 }
 
 article.tweet:hover footer {
-  border-top: 1.5pt solid #00a087;
+  border-top: 1.5px solid #00a087;
 }
